# paperchat

./: .gitignore  KNOWLEDGE_GRAPH.md  README.md  next.config.ts  package-lock.json  package.json  plan.md  vitest.config.ts
backend/: main.py  pyproject.toml  requirements.txt  vercel.json
backend/agent/: context.py  loop.py  subagent.py
backend/agent/tools/: base.py  knowledge_graph.py  plot_chart.py  python_exec.py  read_document.py  spawn_subagent.py  sql_query.py  vector_search.py  web_fetch.py  web_search.py
backend/api/: agent_logs.py  auth_routes.py  conversations.py  documents.py  graph.py  ingest.py  messages.py  profile.py  query.py  rate_limit.py  upload.py
backend/core/: agent_logger.py  auth.py  config.py  embeddings.py  encryption.py  llm.py  models.py  rate_limit.py  supabase.py
backend/ingestion/: chunker.py  entities.py  parsers.py  pipeline.py
backend/tests/: conftest.py  test_agent_loop.py  test_api_contracts.py  test_chunker.py  test_encryption.py  test_entities.py
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/components/: AppShell.tsx  Sidebar.tsx  SidebarProvider.tsx  ThemeProvider.tsx  UserMenu.tsx
src/lib/: agent-logger.ts  auth-fetch.ts  chunker.ts  constants.ts  embeddings.ts  encryption.ts  entities.ts  graph.ts  ingest.ts  llm.ts  models.ts  ocr.ts  rate-limit.ts  retrieval.ts  types.ts
supabase/: config.toml
supabase/migrations/: 001_profiles.sql  002_documents.sql  003_chunks.sql  004_conversations.sql  005_chat_messages.sql  006_storage.sql  007_match_chunks.sql  008_preferred_model.sql  010_global_chat.sql  (+5 more)
(+43 files in other folders)
