[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperchat-backend"
version = "0.1.0"
description = "Paperchat agentic data analyst backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Supabase
    "supabase>=2.7.0",

    # OpenAI (embeddings + LLM via OpenRouter)
    "openai>=1.50.0",

    # Document parsing
    "pymupdf>=1.24.0",          # PDF
    "python-docx>=1.1.0",       # DOCX
    "python-pptx>=1.0.0",       # PPTX
    "openpyxl>=3.1.0",          # XLSX
    "beautifulsoup4>=4.12.0",   # HTML
    "lxml>=5.0.0",              # HTML parser backend
    "ebooklib>=0.18",           # EPUB

    # NLP / NER (model installed via requirements.txt for Vercel compatibility)
    "spacy>=3.7.0",

    # HTTP
    "httpx>=0.27.0",

    # Data analysis tools (for agent)
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",

    # Encryption
    "cryptography>=42.0.0",

    # Config
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.4.0",

    # Async utilities
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
